# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydjunits"
version = "1.0.0"
description = "Python strongly typed quantities with units"
readme = "README.rst"
authors = [{ name = "Alexander Verbraeck", email = "a.verbraeck@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["quantities", "units"]
dependencies = [
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
homepage = "https://djunits.org"
documentation = "https://pydjunits.readthedocs.io/en/latest/"
repository = "https://github.com/averbraeck/pydjunits"
